[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netpulse"
version = "0.1.0"
description = "NetPulse - Network, API, Security & Load testing Python library with CLI"
readme = "README.md"
requires-python = ">=3.1"
authors = [
    { name="wheel-s", email="toshirou2002@gmail.com" }
]

[project.scripts]
netpulse = "netpulse.cli:main"


[tool.black]
line-length = 88
target-version = ['py39']